--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ TgCrypto
 asyncio
 ffmpeg-python
 py-tgcalls
-git+https://github.com/pyrogram/pyrogram@master
+Pyrogram==1.2.20
 git+https://github.com/yt-dlp/yt-dlp@master
 youtube-search-python==1.4.9
 youtube-search
